fix(teaser-event): adjust spacings & classnames

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -150,16 +150,18 @@ body {
 
 .portfolio {
   max-width: 1000px;
-  margin: 0px auto;
+  margin: 35px auto 0 auto;
 
   @media (min-width: 768px) {
   padding: 0 30px;
+  margin-top: 50px;
   }
 }
 
 .portfolio__media-list {
   list-style-type: none;
   padding: 0px;
+  margin: 0px;
 
 
   @media (min-width: 768px) {
@@ -167,12 +169,10 @@ body {
   grid-template-columns: auto auto;
   grid-template-rows: auto auto;
   gap: 20px;
-  margin-top: 35px;
   padding: 0 30px;
   }
 
   @media (min-width: 1200px) {
-    margin-top: 50px;
     gap: 80px;
   }
 }
@@ -292,12 +292,15 @@ body {
   height: auto;
 }
 
-.tilt-images-container {
+.tilt-image-container {
   margin-top: 5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   color: #333;
+  text-align: center;
 }
 
+.tilt-image-container.is-hovered img {
+  will-change: transform;
+  transform-style: preserve-3d;
+  transform: perspective(800px) rotateX( calc(var(--transformX) * -1deg) ) rotateY( calc(var(--transformY) * 1deg) ) scale3d(1, 1, 1);
+  transition: transform .25s ease-out;
+}
